checkpoint in the mutation --> variant transition

--- a/notebooks/2_variant_simulation.ipynb
+++ b/notebooks/2_variant_simulation.ipynb
@@ -41,7 +41,7 @@
     "error_distribution=(0.85, 0.1, 0.05)  # sub, del, ins  # only if add_noise_sequencing_error=True\n",
     "max_errors=float(\"inf\")  # only if add_noise_sequencing_error=True\n",
     "seq_id_column=\"seq_ID\"\n",
-    "mut_column=\"mutation\"\n",
+    "var_column=\"mutation_cdna\"\n",
     "threads = 32\n",
     "check_reason_for_read_fn = False\n",
     "check_reason_for_ref_fn = False\n",
@@ -209,7 +209,7 @@
     "#         with_replacement=False,\n",
     "#         sequences=sequences,\n",
     "#         seq_id_column=seq_id_column,\n",
-    "#         mut_column=mut_column,\n",
+    "#         var_column=var_column,\n",
     "#         reference_out_dir=reference_out_dir,\n",
     "#         vk_build_out_dir=out_dir_vk_build,\n",
     "#         filters=conditions,\n",
@@ -312,7 +312,7 @@
     "                    filters=condition_added_list,\n",
     "                    sequences=sequences,\n",
     "                    seq_id_column=seq_id_column,\n",
-    "                    mut_column=mut_column,\n",
+    "                    var_column=var_column,\n",
     "                    reference_out_dir=reference_out_dir,\n",
     "                    vk_build_out_dir=out_dir_vk_build,\n",
     "                    reads_csv_out=read_df_out,\n",
@@ -683,7 +683,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "columns_to_list = [\"header\",\"order\",\"seq_ID\",\"mutation\",\"mutation_type\",\"wt_sequence\",\"nucleotide_positions\",\"actual_mutation\",\"mutation_cds\",\"mutation_aa\",\"GENOMIC_MUTATION_ID\",\"chromosome\",\"strand\",\"mutation_genome\",\"gene_name\",\"mutation_id\",\"start_mutation_position\",\"end_mutation_position\",\"nucleotide_positions_cdna\",\"actual_mutation_cdna\",\"start_mutation_position_cdna\",\"end_mutation_position_cdna\",\"header_genome\",\"header_cdna\",\"header_cds\",\"nucleotide_positions_genome\",\"actual_mutation_genome\",\"start_mutation_position_genome\",\"end_mutation_position_genome\",\"distance_to_nearest_splice_junction\",\"is_near_splice_junction_10\",\"nearby_mutations\",\"nearby_mutations_count\",\"has_a_nearby_mutation\"]\n",
+    "columns_to_list = [\"header\",\"order\",\"seq_ID\",\"mutation_cdna\",\"mutation_type\",\"wt_sequence\",\"nucleotide_positions\",\"actual_mutation\",\"mutation\",\"mutation_aa\",\"GENOMIC_MUTATION_ID\",\"chromosome\",\"strand\",\"mutation_genome\",\"gene_name\",\"mutation_id\",\"start_mutation_position\",\"end_mutation_position\",\"nucleotide_positions_cdna\",\"actual_mutation_cdna\",\"start_mutation_position_cdna\",\"end_mutation_position_cdna\",\"header_genome\",\"header_cdna\",\"header_cds\",\"nucleotide_positions_genome\",\"actual_mutation_genome\",\"start_mutation_position_genome\",\"end_mutation_position_genome\",\"distance_to_nearest_splice_junction\",\"is_near_splice_junction_10\",\"nearby_variants\",\"nearby_variants_count\",\"has_a_nearby_variant\"]\n",
     "columns_to_or = [\"included_in_synthetic_reads_mutant\",\"included_in_synthetic_reads_wt\",\"included_in_synthetic_reads\", \"any_noisy_reads\", \"any_noisy_reads_mutant\", \"any_noisy_reads_wt\"]\n",
     "columns_to_sum = [\"list_of_read_starting_indices_mutant\",\"list_of_read_starting_indices_wt\",\"number_of_reads_wt\",\"number_of_reads_mutant\",\"noisy_read_indices_mutant\",\"noisy_read_indices_wt\"]\n",
     "columns_to_all = []\n",
