--- a/notebooks/3_variant_matrix_processing.ipynb
+++ b/notebooks/3_variant_matrix_processing.ipynb
@@ -85,7 +85,7 @@
     "dlist_file = \"\"\n",
     "if dlist_file:\n",
     "    # TODO: check if I need to add --mm here\n",
-    "    adata = increment_adata_based_on_dlist_fns(adata = adata, mcrs_fasta = mcrs_fasta, dlist_fasta = dlist_fasta_delaney, kb_count_out = kb_count_out_delaney, index = mutation_reference_file_index_with_dlist_delaney, t2g = mcrs_t2g, fastq = test_fastq, newer_kallisto = newer_kallisto, k=k, mm=multimapping, bustools=\"/home/jrich/miniconda3/envs/cartf/lib/python3.10/site-packages/kb_python/bins/linux/bustools/bustools\")"
+    "    adata = increment_adata_based_on_dlist_fns(adata = adata, vcrs_fasta = vcrs_fasta, dlist_fasta = dlist_fasta_delaney, kb_count_out = kb_count_out_delaney, index = mutation_reference_file_index_with_dlist_delaney, t2g = mcrs_t2g, fastq = test_fastq, newer_kallisto = newer_kallisto, k=k, mm=multimapping, bustools=\"/home/jrich/miniconda3/envs/cartf/lib/python3.10/site-packages/kb_python/bins/linux/bustools/bustools\")"
    ]
   },
   {
