--- a/notebooks/pull_out_reads_for_alignment_viz.ipynb
+++ b/notebooks/pull_out_reads_for_alignment_viz.ipynb
@@ -214,7 +214,7 @@
    ],
    "source": [
     "cosmic_df = pd.read_csv(cosmic_gget_mut_df)\n",
-    "cosmic_df[\"seq_ID:mutation\"] = cosmic_df[\"seq_ID\"] + \":\" + cosmic_df[\"mutation_cds\"]"
+    "cosmic_df[\"seq_ID:mutation\"] = cosmic_df[\"seq_ID\"] + \":\" + cosmic_df[\"mutation\"]"
    ]
   },
   {
