finished parameter renaming

--- a/notebooks/4_5_cancer_typing_with_cell_lines.ipynb
+++ b/notebooks/4_5_cancer_typing_with_cell_lines.ipynb
@@ -93,7 +93,7 @@
     "merge_strategy = \"all\"  # only if matrix_type is gene\n",
     "\n",
     "mutation_metadata_df_path = \"/home/jrich/data/varseek_data_fresh/vk_build_pipeline_t2t_nov16/variants_updated_filtered.csv\"\n",
-    "mutation_metadata_df_columns = [\"mcrs_id\", \"mcrs_header\", \"gene_name\", \"header_with_gene_name\"]  #* change usecols as desired\n",
+    "mutation_metadata_df_columns = [\"vcrs_id\", \"vcrs_header\", \"gene_name\", \"header_with_gene_name\"]  #* change usecols as desired\n",
     "base_dir = \"/home/jrich/data/varseek_data/sequencing/bulk/ccle\"\n",
     "ccle_data_out_dir = os.path.join(base_dir, \"ccle_data_out_medium_nov18\")  #!!! change to ccle_data_out_nov19\n",
     "json_metadata_path = \"/home/jrich/data/varseek_data/sequencing/bulk/ccle/ccle_metadata_medium_best.json\"  #!!! change to ccle_metadata_updated.json"
@@ -110,7 +110,7 @@
     "adata_out_path = f\"{base_dir}/adata_combined_ccle_rnaseq_{matrix_type}.h5ad\"\n",
     "adata_grouped_tissue_out_path = f\"{base_dir}/adata_combined_ccle_rnaseq_{matrix_type}_grouped_tissue.h5ad\"\n",
     "\n",
-    "count_column = \"mcrs_count\" if (matrix_type == \"mutation\" or sum_strategy != \"unique_mutations\") else \"gene_count\""
+    "count_column = \"vcrs_count\" if (matrix_type == \"mutation\" or sum_strategy != \"unique_mutations\") else \"gene_count\""
    ]
   },
   {
@@ -180,7 +180,7 @@
      "text": [
       "AnnData object with n_obs × n_vars = 50 × 5241651\n",
       "    obs: 'sample_accession', 'experiment_accession', 'run_accession', 'experiment_alias_underscores_only', 'tissue', 'library_strategy', 'primary_disease', 'subtype_disease', 'sex', 'age', 'lineage_subtype', 'Cellosaurus_NCIt_disease', 'lineage'\n",
-      "    var: 'mcrs_id', 'mcrs_header', 'gene_name', 'header_with_gene_name', 'mcrs_count', 'gene_name_set', 'gene_name_set_string'\n"
+      "    var: 'vcrs_id', 'vcrs_header', 'gene_name', 'header_with_gene_name', 'vcrs_count', 'gene_name_set', 'gene_name_set_string'\n"
      ]
     }
    ],
@@ -209,8 +209,8 @@
     "    adata_mutation.obs[\"tissue\"] = tissue\n",
     "\n",
     "    adata_mutation = vk.varseek_clean.clean(adata_mutation, adata_output_path = adata_output_path, minimum_count_filter = minimum_count_filter, use_binary_matrix = use_binary_matrix, technology = \"bulk\", do_cpm_normalization = do_cpm_normalization, split_reads_by_Ns = split_reads_by_Ns)\n",
-    "    if 'mcrs_count' in adata_mutation.var.columns:\n",
-    "        adata_mutation.var.drop('mcrs_count', axis=1, inplace=True)\n",
+    "    if 'vcrs_count' in adata_mutation.var.columns:\n",
+    "        adata_mutation.var.drop('vcrs_count', axis=1, inplace=True)\n",
     "\n",
     "    adata_list.append(adata_mutation)\n",
     "\n",
@@ -230,16 +230,16 @@
     "if use_binary_matrix:\n",
     "    adata.X = (adata.X > 0).astype(int)\n",
     "\n",
-    "adata.var['mcrs_id'] = adata.var.index\n",
+    "adata.var['vcrs_id'] = adata.var.index\n",
     "original_var_names = adata.var_names.copy()\n",
-    "# merge adata.var with mutation_metadata_df by mcrs_id\n",
-    "adata.var = adata.var.merge(mutation_metadata_df, on='mcrs_id', how='left')\n",
+    "# merge adata.var with mutation_metadata_df by vcrs_id\n",
+    "adata.var = adata.var.merge(mutation_metadata_df, on='vcrs_id', how='left')\n",
     "adata.var_names = original_var_names\n",
     "\n",
     "ncomps_temp = min(n_comps, adata.shape[0]-1, adata.shape[1]-1)\n",
     "n_comps = ncomps_temp\n",
     "\n",
-    "adata.var[\"mcrs_count\"] = adata.X.sum(axis=0).A1 if hasattr(adata.X, \"A1\") else np.asarray(adata.X.sum(axis=0)).flatten()  \n",
+    "adata.var[\"vcrs_count\"] = adata.X.sum(axis=0).A1 if hasattr(adata.X, \"A1\") else np.asarray(adata.X.sum(axis=0)).flatten()  \n",
     "adata.var = adata.var.copy()  # avoids warning\n",
     "adata.var[\"gene_name\"] = adata.var[\"gene_name\"].astype('object')  # converts from category to object\n",
     "adata.var[\"gene_name\"] = adata.var[\"gene_name\"].apply(safe_literal_eval)  # converts list-like string to list\n",
@@ -713,8 +713,8 @@
     "        for mutation_name, count in zip(adata_tissue_specific.var['header_with_gene_name'], adata_tissue_specific.var[count_column]):\n",
     "            f.write(f\"{mutation_name} {count}\\n\")\n",
     "\n",
-    "    plot_items_descending_order(adata_tissue_specific.var, x_column = 'header_with_gene_name', y_column = count_column, item_range = (0,100), xlabel = \"Mutation\", title = \"Top 100 Mutations by MCRS Count\", save_path = f'{specific_tissue_dir}/top_100_mutations_plot.png', figsize = (15, 7))\n",
-    "    plot_items_descending_order(adata_tissue_specific.var, x_column = 'header_with_gene_name', y_column = count_column, item_range = (0,1000), xlabel = \"Mutation Index\", title = \"Top 1000 Mutations by MCRS Count\", save_path = f'{specific_tissue_dir}/top_1000_mutations_plot.png', figsize = (15, 7))\n",
+    "    plot_items_descending_order(adata_tissue_specific.var, x_column = 'header_with_gene_name', y_column = count_column, item_range = (0,100), xlabel = \"Mutation\", title = \"Top 100 Mutations by VCRS Count\", save_path = f'{specific_tissue_dir}/top_100_mutations_plot.png', figsize = (15, 7))\n",
+    "    plot_items_descending_order(adata_tissue_specific.var, x_column = 'header_with_gene_name', y_column = count_column, item_range = (0,1000), xlabel = \"Mutation Index\", title = \"Top 1000 Mutations by VCRS Count\", save_path = f'{specific_tissue_dir}/top_1000_mutations_plot.png', figsize = (15, 7))\n",
     "\n",
     "    combined_gene = adata_tissue_specific.var.groupby('gene_name_set_string', as_index=False)[count_column].sum()\n",
     "    combined_gene = pd.merge(combined_gene, adata_tissue_specific.var[['gene_name_set_string']], on='gene_name_set_string', how='left')\n",
@@ -726,7 +726,7 @@
     "        for gene_name, count in zip(adata_tissue_specific.uns['combined_genes']['gene_name_set_string'], adata_tissue_specific.uns['combined_genes'][count_column]):\n",
     "            f.write(f\"{gene_name} {count}\\n\")\n",
     "\n",
-    "    plot_items_descending_order(adata_tissue_specific.uns['combined_genes'], x_column = 'gene_name_set_string', y_column = count_column, item_range = (0,100), xlabel = \"Gene\", title = \"Top 100 Genes by MCRS Count\", save_path = f'{specific_tissue_dir}/top_100_genes_plot.png', figsize = (15, 7))\n",
+    "    plot_items_descending_order(adata_tissue_specific.uns['combined_genes'], x_column = 'gene_name_set_string', y_column = count_column, item_range = (0,100), xlabel = \"Gene\", title = \"Top 100 Genes by VCRS Count\", save_path = f'{specific_tissue_dir}/top_100_genes_plot.png', figsize = (15, 7))\n",
     "\n",
     "    adata_tissue_specific_list.append(adata_tissue_specific)\n",
     "\n",
