--- a/notebooks/4_6_entex.ipynb
+++ b/notebooks/4_6_entex.ipynb
@@ -46,7 +46,7 @@
     "standard_t2g = \"/home/jrich/data/varseek_data/reference/T2T/GCF_009914755.1/kb_index/t2g.txt\"\n",
     "\n",
     "mutation_metadata_df_path = \"/home/jrich/data/varseek_data_fresh/vk_build_pipeline_t2t_nov16/variants_updated_filtered.csv\"\n",
-    "mutation_metadata_df_columns = [\"mcrs_id\", \"gene_name\", \"header_with_gene_name\"]  #* change usecols as desired\n",
+    "mutation_metadata_df_columns = [\"vcrs_id\", \"gene_name\", \"header_with_gene_name\"]  #* change usecols as desired\n",
     "\n",
     "# Base directory\n",
     "base_dir = \"/home/jrich/data/varseek_data/sequencing/bulk/entex\"\n",
@@ -188,8 +188,8 @@
     "        \n",
     "        adata_mutation = vk.varseek_clean.clean(adata_mutation, adata_output_path = adata_output_path, minimum_count_filter = minimum_count_filter, use_binary_matrix = use_binary_matrix, technology = \"bulk\", do_cpm_normalization = do_cpm_normalization, split_reads_by_Ns = split_reads_by_Ns)\n",
     "\n",
-    "        if 'mcrs_count' in adata_mutation.var.columns:\n",
-    "            adata_mutation.var.drop('mcrs_count', axis=1, inplace=True)\n",
+    "        if 'vcrs_count' in adata_mutation.var.columns:\n",
+    "            adata_mutation.var.drop('vcrs_count', axis=1, inplace=True)\n",
     "\n",
     "        adata_list.append(adata_mutation)\n",
     "\n",
@@ -206,13 +206,13 @@
     "if use_binary_matrix:\n",
     "    adata.X = (adata.X > 0).astype(int)\n",
     "\n",
-    "adata.var['mcrs_id'] = adata.var.index\n",
+    "adata.var['vcrs_id'] = adata.var.index\n",
     "original_var_names = adata.var_names.copy()\n",
-    "# merge adata.var with mutation_metadata_df by mcrs_id\n",
-    "adata.var = adata.var.merge(mutation_metadata_df, on='mcrs_id', how='left')\n",
+    "# merge adata.var with mutation_metadata_df by vcrs_id\n",
+    "adata.var = adata.var.merge(mutation_metadata_df, on='vcrs_id', how='left')\n",
     "adata.var_names = original_var_names\n",
     "\n",
-    "adata.var[\"mcrs_count\"] = adata.X.sum(axis=0).A1 if hasattr(adata.X, \"A1\") else np.asarray(adata.X.sum(axis=0)).flatten()\n",
+    "adata.var[\"vcrs_count\"] = adata.X.sum(axis=0).A1 if hasattr(adata.X, \"A1\") else np.asarray(adata.X.sum(axis=0)).flatten()\n",
     "\n",
     "adata.var = adata.var.copy()  # avoids warning\n",
     "adata.var[\"gene_name\"] = adata.var[\"gene_name\"].astype('object')  # converts from category to object\n",
