--- a/notebooks/7_3_dlist_source_tests.ipynb
+++ b/notebooks/7_3_dlist_source_tests.ipynb
@@ -548,7 +548,7 @@
     "    $mutation_reference_file_fasta_final_grch37\n",
     "\n",
     "mutation_reference_file_fasta_final_grch37_t2g = f\"/home/jrich/Desktop/gget_mutate_project_clean_k{k}_transcriptome/data/mutant_reference/mutation_t2g_for_synthetic_reads.txt\"\n",
-    "create_mutant_t2g(mutation_reference_file_fasta_final_grch37, mutation_reference_file_fasta_final_grch37_t2g)"
+    "create_identity_t2g(mutation_reference_file_fasta_final_grch37, mutation_reference_file_fasta_final_grch37_t2g)"
    ]
   },
   {
@@ -609,7 +609,7 @@
     "    $mutation_reference_file_fasta_kb_and_grch37_perfect_substring_filtered\n",
     "\n",
     "mutation_reference_file_fasta_final2_grch37_t2g = \"/home/jrich/Desktop/CART_prostate_sc/data/mutation_reference_for_synthetic_reads/mutation_t2g_with_dlist_for_synthetic_reads.txt\"\n",
-    "create_mutant_t2g(mutation_reference_file_fasta_kb_and_grch37_perfect_substring_filtered, mutation_reference_file_fasta_final2_grch37_t2g)"
+    "create_identity_t2g(mutation_reference_file_fasta_kb_and_grch37_perfect_substring_filtered, mutation_reference_file_fasta_final2_grch37_t2g)"
    ]
   }
  ],
