--- a/notebooks/pull_out_reads_for_alignment_viz.ipynb
+++ b/notebooks/pull_out_reads_for_alignment_viz.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "# Path to COSMIC vk build data frame\n",
     "cosmic_gget_mut_df = \"/home/jrich/data/varseek_data/reference/cosmic/CancerMutationCensus_AllData_Tsv_v100_GRCh37/CancerMutationCensus_AllData_v100_GRCh37_mutation_workflow_with_cdna.csv\"\n",
-    "mcrs_fa_path = \"/home/jrich/data/varseek_data_fresh/vk_build_pipeline_grch37_ensembl93/vcrs_filtered.fa\"\n",
+    "vcrs_fa_path = \"/home/jrich/data/varseek_data_fresh/vk_build_pipeline_grch37_ensembl93/vcrs_filtered.fa\"\n",
     "base_out = \"/home/jrich/data/varseek_data_fresh/alignment_visualization\"\n",
     "index = \"/home/jrich/data/varseek_data_fresh/vk_build_pipeline_grch37_ensembl93/mutation_reference.idx\"\n",
     "t2g = \"/home/jrich/data/varseek_data_fresh/vk_build_pipeline_grch37_ensembl93/t2g_filtered.txt\"\n",
@@ -225,7 +225,7 @@
    "outputs": [],
    "source": [
     "file_path = \"/home/jrich/data/varseek_data_fresh/vk_build_pipeline_grch37_ensembl93/variants_updated_filtered.csv\"\n",
-    "columns_to_load = [\"header_cds\", \"mcrs_id\"]\n",
+    "columns_to_load = [\"header_cds\", \"vcrs_id\"]\n",
     "\n",
     "metadata_df = pd.read_csv(file_path, usecols=columns_to_load)\n",
     "\n",
@@ -238,11 +238,11 @@
     "# Apply the function to the column\n",
     "metadata_df['header_cds'] = metadata_df['header_cds'].apply(process_header_cds).astype(str)\n",
     "\n",
-    "id_to_cds_header_dict = dict(zip(metadata_df['mcrs_id'], metadata_df['header_cds']))\n",
+    "id_to_cds_header_dict = dict(zip(metadata_df['vcrs_id'], metadata_df['header_cds']))\n",
     "top10_headers = [id_to_cds_header_dict[x] for x in top10]\n",
     "\n",
     "# Convert the dictionary to a DataFrame\n",
-    "id_to_cds_header_df = pd.DataFrame(list(id_to_cds_header_dict.items()), columns=['mcrs_id', 'seq_ID:mutation'])\n",
+    "id_to_cds_header_df = pd.DataFrame(list(id_to_cds_header_dict.items()), columns=['vcrs_id', 'seq_ID:mutation'])\n",
     "\n",
     "# Merge with cosmic_df\n",
     "cosmic_df = cosmic_df.merge(id_to_cds_header_df, on='seq_ID:mutation', how='left')"
@@ -286,7 +286,7 @@
        "      <th>mutation_id</th>\n",
        "      <th>mutation</th>\n",
        "      <th>seq_ID:mutation</th>\n",
-       "      <th>mcrs_id</th>\n",
+       "      <th>vcrs_id</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -469,7 +469,7 @@
        "5298953         MT    NaN       g.6419del    MT-CO1     35129715   c.516del   \n",
        "5298954         MT    NaN  g.6698_6699dup    MT-CO1     35129625   c.795dup   \n",
        "\n",
-       "                   seq_ID:mutation      mcrs_id  \n",
+       "                   seq_ID:mutation      vcrs_id  \n",
        "689965    ENST00000362079:c.174G>A  seq_0688768  \n",
        "1341346   ENST00000331825:c.163T>C  seq_1338451  \n",
        "1673880   ENST00000252242:c.351C>T  seq_1668681  \n",
@@ -697,7 +697,7 @@
     "import glob\n",
     "data = extract_out\n",
     "\n",
-    "mcrs_fa = pyfastx.Fasta(mcrs_fa_path, build_index=True)\n",
+    "vcrs_fa = pyfastx.Fasta(vcrs_fa_path, build_index=True)\n",
     "\n",
     "os.makedirs(bowtie_out, exist_ok=True)\n",
     "\n",
@@ -736,10 +736,10 @@
     "\n",
     "\n",
     "\n",
-    "    # repeat but for mcrs\n",
-    "    outfolder_mcrs = f\"{bowtie_out}/{variant}_vcrs\"\n",
-    "    !mkdir -p $outfolder_mcrs\n",
-    "    variant_reference_sequence = mcrs_fa[variant].seq.strip()\n",
+    "    # repeat but for vcrs\n",
+    "    outfolder_vcrs = f\"{bowtie_out}/{variant}_vcrs\"\n",
+    "    !mkdir -p $outfolder_vcrs\n",
+    "    variant_reference_sequence = vcrs_fa[variant].seq.strip()\n",
     "\n",
     "    # Align reads to human ref using bowtie2\n",
     "    variant_sam = variant + \".sam\"\n",
@@ -749,22 +749,22 @@
     "        -x $b_index/GRCh38_noalt_as/GRCh38_noalt_as \\\n",
     "        -p $threads \\\n",
     "        -c $variant_reference_sequence \\\n",
-    "        -S $outfolder_mcrs/$variant_sam\n",
+    "        -S $outfolder_vcrs/$variant_sam\n",
     "\n",
     "    # Convert sam to bam\n",
     "    variant_bam = variant + \".bam\"\n",
     "    !$samtools view \\\n",
-    "        -bS -F4 $outfolder_mcrs/$variant_sam \\\n",
-    "        > $outfolder_mcrs/$variant_bam\n",
+    "        -bS -F4 $outfolder_vcrs/$variant_sam \\\n",
+    "        > $outfolder_vcrs/$variant_bam\n",
     "\n",
     "    # Sort bam file\n",
     "    variant_bam_sorted = variant + \"_sorted_vcrs.bam\"\n",
     "    !$samtools sort \\\n",
-    "        $outfolder_mcrs/$variant_bam \\\n",
-    "        -o $outfolder_mcrs/$variant_bam_sorted\n",
+    "        $outfolder_vcrs/$variant_bam \\\n",
+    "        -o $outfolder_vcrs/$variant_bam_sorted\n",
     "\n",
     "    # Create an index for the sorted bam file (creates a .bai file)\n",
-    "    !$samtools index $outfolder_mcrs/$variant_bam_sorted"
+    "    !$samtools index $outfolder_vcrs/$variant_bam_sorted"
    ]
   },
   {
