--- a/tests/kb_tests.ipynb
+++ b/tests/kb_tests.ipynb
@@ -10,7 +10,7 @@
     "import subprocess\n",
     "import shutil\n",
     "import sys\n",
-    "from varseek.utils import create_mutant_t2g\n",
+    "from varseek.utils import create_identity_t2g\n",
     "\n",
     "varseek_directory = os.path.dirname(os.path.abspath(\"\"))\n",
     "\n",
@@ -70,7 +70,7 @@
     "    subprocess.run(kb_ref_command, check=True)\n",
     "\n",
     "if not os.path.exists(test_t2g):\n",
-    "    create_mutant_t2g(ref_fa, test_t2g)\n",
+    "    create_identity_t2g(ref_fa, test_t2g)\n",
     "\n",
     "if not os.path.exists(kb_count_out_test) or len(os.listdir(kb_count_out_test)) == 0:\n",
     "    kb_count_command = [\"kb\", \"count\", \"-t\", str(8), \"-i\", test_index, \"-g\", test_t2g, \"-x\", \"bulk\", \"--num\", \"--h5ad\", \"--parity\", \"single\", \"-o\", kb_count_out_test, \"--kallisto\", kallisto, \"--bustools\", bustools] + rnaseq_fastq_files_final\n",
