begun troubleshooting vk build

--- a/notebooks/2_variant_simulation.ipynb
+++ b/notebooks/2_variant_simulation.ipynb
@@ -73,7 +73,7 @@
    "outputs": [],
    "source": [
     "if not os.path.exists(vk_ref_out_dir):\n",
-    "    _ = vk.ref(mutations=\"cosmic_cmc\", sequences=\"cdna\", out=vk_ref_out_dir, reference_out_dir=reference_out_dir, dlist_reference_source=\"grch37\", dlist_reference_ensembl_release=93, save_variants_updated_exploded_vk_info_csv=True)"
+    "    _ = vk.ref(variants=\"cosmic_cmc\", sequences=\"cdna\", out=vk_ref_out_dir, reference_out_dir=reference_out_dir, dlist_reference_source=\"grch37\", dlist_reference_ensembl_release=93, save_variants_updated_exploded_vk_info_csv=True)"
    ]
   },
   {
@@ -205,7 +205,7 @@
     "\n",
     "# if not os.path.exists(mutation_metadata_df_out) or not os.path.exists(read_df_out):\n",
     "#     simulated_df_dict = vk.sim(\n",
-    "#         mutations = mutation_metadata_df,\n",
+    "#         variants = mutation_metadata_df,\n",
     "#         reads_fastq_out = synthetic_reads_fastQ,\n",
     "#         number_of_variants_to_sample=number_of_variants_to_sample,\n",
     "#         strand=strand,\n",
@@ -230,7 +230,7 @@
     "#         variants_updated_csv_out=mutation_metadata_df_out,\n",
     "#     )\n",
     "\n",
-    "#     read_df, mutation_metadata_df = simulated_df_dict[\"read_df\"], simulated_df_dict[\"mutations\"]\n",
+    "#     read_df, mutation_metadata_df = simulated_df_dict[\"read_df\"], simulated_df_dict[\"variants\"]\n",
     "# else:\n",
     "#     read_df = pd.read_csv(read_df_out)\n",
     "#     mutation_metadata_df = pd.read_csv(mutation_metadata_df_out)"
@@ -332,7 +332,7 @@
     "                    variants_updated_csv_out=mutation_metadata_df_out,\n",
     "                )\n",
     "\n",
-    "                mutation_metadata_df, read_df = simulated_df_dict['mutations'], simulated_df_dict['read_df']\n",
+    "                mutation_metadata_df, read_df = simulated_df_dict['variants'], simulated_df_dict['read_df']\n",
     "\n",
     "read_df = pd.read_csv(read_df_out)\n",
     "mutation_metadata_df = pd.read_csv(mutation_metadata_df_out)"
