--- a/notebooks/1_0_vk_ref_count_tutorial.ipynb
+++ b/notebooks/1_0_vk_ref_count_tutorial.ipynb
@@ -17,8 +17,8 @@
    "outputs": [],
    "source": [
     "# Required\n",
-    "mutations = \"cosmic_cmc\"  # \"cosmic_cmc\"  # file path to mutations csv/tsv file OR one of the supported databases - eg cosmic_cmc\n",
-    "sequences = \"cdna\"  # cdna  # file path to reference sequence fasta file OR, only if 'mutations' is in the supported databases, one of the following options is also supported: \"cds\", \"cdna\", \"genome\", \"cdna_and_genome\" - sequences for vk build\n",
+    "variants = \"cosmic_cmc\"  # \"cosmic_cmc\"  # file path to variants csv/tsv file OR one of the supported databases - eg cosmic_cmc\n",
+    "sequences = \"cdna\"  # cdna  # file path to reference sequence fasta file OR, only if 'variants' is in the supported databases, one of the following options is also supported: \"cds\", \"cdna\", \"genome\", \"cdna_and_genome\" - sequences for vk build\n",
     "rnaseq_fastq_files = \"\"  # pass as a single string or as a list of strings (if paired-end, then pass each pair sequentially with R1 preceding R2)\n",
     "\n",
     "# General\n",
@@ -30,9 +30,9 @@
     "# vk ref\n",
     "download = False  # download vk ref index and t2g\n",
     "filters=(\n",
-    "    \"substring_alignment_to_reference:equal=none\",  # filter out mutations which are a substring of the reference genome\n",
-    "    \"pseudoaligned_to_reference_despite_not_truly_aligning:is_not_true\",  # filter out mutations which pseudoaligned to human genome despite not truly aligning\n",
-    "    \"alignment_to_reference:equal=none\",  # *** erase eventually when I want to d-list  # filter out mutations which are capable of being d-listed (given that I filter out the substrings above)\n",
+    "    \"substring_alignment_to_reference:equal=none\",  # filter out variants which are a substring of the reference genome\n",
+    "    \"pseudoaligned_to_reference_despite_not_truly_aligning:is_not_true\",  # filter out variants which pseudoaligned to human genome despite not truly aligning\n",
+    "    \"alignment_to_reference:equal=none\",  # *** erase eventually when I want to d-list  # filter out variants which are capable of being d-listed (given that I filter out the substrings above)\n",
     "    \"longest_homopolymer_length:bottom_percent=99.99\",  # filters out VCRSs with repeating single nucleotide - 99.99 keeps the bottom 99.99% (fraction 0.9999) ie filters out the top 0.01%\n",
     "    \"triplet_complexity:top_percent=99.9\",  # filters out VCRSs with repeating triplets - 99.9 keeps the top 99.9% (fraction 0.999) ie filters out the bottom 0.1%\n",
     ")\n",
@@ -64,7 +64,7 @@
    "outputs": [],
    "source": [
     "vk_ref_output_dict = vk.ref(\n",
-    "    mutations=mutations,  # build\n",
+    "    variants=variants,  # build\n",
     "    sequences=sequences,\n",
     "    w=w,\n",
     "    k=k,\n",
