--- a/notebooks/4_2_mutation_analysis_heatmaps.ipynb
+++ b/notebooks/4_2_mutation_analysis_heatmaps.ipynb
@@ -39,7 +39,7 @@
     "\n",
     "import logging\n",
     "from gget.utils import set_up_logger\n",
-    "logger = set_up_logger()\n",
+    "logger = logging.getLogger(__name__)\n",
     "logger.setLevel(logging.INFO)\n",
     "\n",
     "gget.mutate(\n",
