--- a/notebooks/4_5_cancer_typing_with_cell_lines.ipynb
+++ b/notebooks/4_5_cancer_typing_with_cell_lines.ipynb
@@ -21,7 +21,7 @@
     "# importlib.reload(varseek.varseek_clean)\n",
     "# import varseek as vk\n",
     "\n",
-    "# adata_t1_clean = vk.varseek_clean.clean(adata_t1, adata_output_path = \"./temp.h5ad\", minimum_count_filter = 2, use_binary_matrix = False, technology = \"bulk\", do_cpm_normalization = False, split_reads_by_Ns = False)"
+    "# adata_t1_clean = vk.varseek_clean.clean(adata_t1, adata_output_path = \"./temp.h5ad\", minimum_count_filter = 2, use_binary_matrix = False, technology = \"bulk\", do_cpm_normalization = False, split_reads_by_Ns_and_low_quality_bases = False)"
    ]
   },
   {
@@ -83,7 +83,7 @@
    "outputs": [],
    "source": [
     "minimum_count_filter = 2  # anything below this will be set to 0\n",
-    "split_reads_by_Ns = False\n",
+    "split_reads_by_Ns_and_low_quality_bases = False\n",
     "use_binary_matrix = False\n",
     "do_cpm_normalization = False\n",
     "tolerance=3  # tolerance in diff between number of leiden clusters and number of cancer types\n",
@@ -208,7 +208,7 @@
     "    adata_mutation.obs[\"experiment_alias_underscores_only\"] = experiment_alias_underscores_only\n",
     "    adata_mutation.obs[\"tissue\"] = tissue\n",
     "\n",
-    "    adata_mutation = vk.varseek_clean.clean(adata_mutation, adata_output_path = adata_output_path, minimum_count_filter = minimum_count_filter, use_binary_matrix = use_binary_matrix, technology = \"bulk\", do_cpm_normalization = do_cpm_normalization, split_reads_by_Ns = split_reads_by_Ns)\n",
+    "    adata_mutation = vk.varseek_clean.clean(adata_mutation, adata_output_path = adata_output_path, minimum_count_filter = minimum_count_filter, use_binary_matrix = use_binary_matrix, technology = \"bulk\", do_cpm_normalization = do_cpm_normalization, split_reads_by_Ns_and_low_quality_bases = split_reads_by_Ns_and_low_quality_bases)\n",
     "    if 'vcrs_count' in adata_mutation.var.columns:\n",
     "        adata_mutation.var.drop('vcrs_count', axis=1, inplace=True)\n",
     "\n",
