--- a/notebooks/4_6_entex.ipynb
+++ b/notebooks/4_6_entex.ipynb
@@ -32,8 +32,7 @@
     "threads = 32\n",
     "k = 59\n",
     "minimum_count_filter = 2  # anything below this will be set to 0\n",
-    "split_reads_by_Ns = False\n",
-    "replace_low_quality_bases_with_N = False\n",
+    "split_reads_by_Ns_and_low_quality_bases = False\n",
     "use_binary_matrix = False\n",
     "matrix_type = \"mutation\"  # mutation or gene\n",
     "sum_strategy = \"total_reads\"  # only if matrix_type is gene\n",
@@ -108,8 +107,7 @@
     "                fastq_files,\n",
     "                trim_edges_off_reads=True,\n",
     "                run_fastqc=False,\n",
-    "                replace_low_quality_bases_with_N=replace_low_quality_bases_with_N,\n",
-    "                split_reads_by_Ns=split_reads_by_Ns,\n",
+    "                split_reads_by_Ns_and_low_quality_bases=split_reads_by_Ns_and_low_quality_bases,\n",
     "                parity=\"paired\",\n",
     "                fastqc_out_dir=\".\",\n",
     "                minimum_base_quality_trim_reads=13,\n",
@@ -186,7 +184,7 @@
     "        adata_mutation.obs_names = [sample_dir]\n",
     "        adata_mutation.obs['experiment_id'] = sample_dir\n",
     "        \n",
-    "        adata_mutation = vk.varseek_clean.clean(adata_mutation, adata_output_path = adata_output_path, minimum_count_filter = minimum_count_filter, use_binary_matrix = use_binary_matrix, technology = \"bulk\", do_cpm_normalization = do_cpm_normalization, split_reads_by_Ns = split_reads_by_Ns)\n",
+    "        adata_mutation = vk.varseek_clean.clean(adata_mutation, adata_output_path = adata_output_path, minimum_count_filter = minimum_count_filter, use_binary_matrix = use_binary_matrix, technology = \"bulk\", do_cpm_normalization = do_cpm_normalization, split_reads_by_Ns_and_low_quality_bases = split_reads_by_Ns_and_low_quality_bases)\n",
     "\n",
     "        if 'vcrs_count' in adata_mutation.var.columns:\n",
     "            adata_mutation.var.drop('vcrs_count', axis=1, inplace=True)\n",
