made modifications for notebook 7_3

--- a/notebooks/1_0_vk_ref_count_tutorial.ipynb
+++ b/notebooks/1_0_vk_ref_count_tutorial.ipynb
@@ -32,8 +32,7 @@
     "    \"substring_alignment_to_reference:equal=none\",  # filter out variants which are a substring of the reference genome\n",
     "    \"pseudoaligned_to_reference_despite_not_truly_aligning:is_not_true\",  # filter out variants which pseudoaligned to human genome despite not truly aligning\n",
     "    \"alignment_to_reference:equal=none\",  # *** erase eventually when I want to d-list  # filter out variants which are capable of being d-listed (given that I filter out the substrings above)\n",
-    "    \"longest_homopolymer_length:bottom_percent=99.99\",  # filters out VCRSs with repeating single nucleotide - 99.99 keeps the bottom 99.99% (fraction 0.9999) ie filters out the top 0.01%\n",
-    "    \"triplet_complexity:top_percent=99.9\",  # filters out VCRSs with repeating triplets - 99.9 keeps the top 99.9% (fraction 0.999) ie filters out the bottom 0.1%\n",
+    "    \"num_distinct_triplets:greater_than=2\",\n",
     ")\n",
     "cosmic_version = 100  # COSMIC version for gget cosmic\n",
     "# os.environ['COSMIC_EMAIL'] = 'your_email'  # to avoid being prompted for email in varseek build\n",
