removed column hard coding from vk info and all functions - first attempt

--- a/notebooks/3_variant_matrix_processing.ipynb
+++ b/notebooks/3_variant_matrix_processing.ipynb
@@ -703,15 +703,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mutation_type = np.full(len(adata.var), 'unknown', dtype=object)\n",
-    "mutation_type[adata.var['mutation'].str.contains('>', na=False)] = 'substitution'\n",
-    "mutation_type[adata.var['mutation'].str.contains('delins', na=False)] = 'delins'\n",
-    "mutation_type[(adata.var['mutation'].str.contains('ins', na=False)) & (~adata.var['mutation'].str.contains('delins', na=False))] = 'insertion'\n",
-    "mutation_type[(adata.var['mutation'].str.contains('del', na=False)) & (~adata.var['mutation'].str.contains('delins', na=False))] = 'deletion'\n",
-    "mutation_type[adata.var['mutation'].str.contains('dup', na=False)] = 'duplication'\n",
-    "mutation_type[adata.var['mutation'].str.contains('inv', na=False)] = 'inversion'\n",
+    "variant_type = np.full(len(adata.var), 'unknown', dtype=object)\n",
+    "variant_type[adata.var['mutation'].str.contains('>', na=False)] = 'substitution'\n",
+    "variant_type[adata.var['mutation'].str.contains('delins', na=False)] = 'delins'\n",
+    "variant_type[(adata.var['mutation'].str.contains('ins', na=False)) & (~adata.var['mutation'].str.contains('delins', na=False))] = 'insertion'\n",
+    "variant_type[(adata.var['mutation'].str.contains('del', na=False)) & (~adata.var['mutation'].str.contains('delins', na=False))] = 'deletion'\n",
+    "variant_type[adata.var['mutation'].str.contains('dup', na=False)] = 'duplication'\n",
+    "variant_type[adata.var['mutation'].str.contains('inv', na=False)] = 'inversion'\n",
     "\n",
-    "adata.var['mutation_type'] = mutation_type"
+    "adata.var['variant_type'] = variant_type"
    ]
   },
   {
