--- a/notebooks/2_variant_simulation.ipynb
+++ b/notebooks/2_variant_simulation.ipynb
@@ -286,11 +286,11 @@
     "# number_of_variants_to_sample = 5\n",
     "# m_list = [1, 2, 3]\n",
     "# w_list = [0, 1, 2]\n",
-    "# conditions = ['mutation_type:equal=substitution', 'mutation_type:not_equal=substitution']\n",
+    "# conditions = ['variant_type:equal=substitution', 'variant_type:not_equal=substitution']\n",
     "\n",
     "m_list = [1, 2, 3, 4, 5, 6, 7, 8, 16, 32, 64, 128, 256]\n",
     "w_list = [0, 1, 2, 3, 4, 5, 6, 7, 8, 16, 32, 64, 128, 256]\n",
-    "conditions = ['mutation_type:equal=substitution', 'mutation_type:not_equal=substitution', 'kmer_overlap_with_other_VCRSs:is_false', 'kmer_overlap_with_other_VCRSs:is_true', 'is_near_splice_junction_10:is_false', 'is_near_splice_junction_10:is_true']\n",
+    "conditions = ['variant_type:equal=substitution', 'variant_type:not_equal=substitution', 'kmer_overlap_with_other_VCRSs:is_false', 'kmer_overlap_with_other_VCRSs:is_true', 'is_near_splice_junction_10:is_false', 'is_near_splice_junction_10:is_true']\n",
     "\n",
     "random.shuffle(m_list)\n",
     "random.shuffle(w_list)\n",
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +530,7 @@
     "# don't show mm here, because mm is counted as a TP for crude\n",
     "create_venn_diagram(true_set_crude, positive_set_crude, TN = metric_dictionary_reads_crude['TN'], mm = None, out_path = f\"{plot_output_folder}/venn_diagram_read_crude.png\")\n",
     "\n",
-    "create_stratified_metric_bar_plot(read_df, 'vcrs_mutation_type', 'accuracy', overall_metric = metric_dictionary_reads_crude['accuracy'], log_x_axis = False, display_numbers = True, crude = True, out_path = f\"{plot_output_folder}/accuracy_vs_vcrs_mutation_type_read_perspective_crude.png\")"
+    "create_stratified_metric_bar_plot(read_df, 'vcrs_variant_type', 'accuracy', overall_metric = metric_dictionary_reads_crude['accuracy'], log_x_axis = False, display_numbers = True, crude = True, out_path = f\"{plot_output_folder}/accuracy_vs_vcrs_variant_type_read_perspective_crude.png\")"
    ]
   },
   {
@@ -696,7 +696,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "columns_to_list = [\"vcrs_header\",\"order\",\"seq_ID\",\"mutation_cdna\",\"mutation_type\",\"wt_sequence\",\"nucleotide_positions\",\"actual_mutation\",\"mutation\",\"mutation_aa\",\"GENOMIC_MUTATION_ID\",\"chromosome\",\"strand\",\"mutation_genome\",\"gene_name\",\"mutation_id\",\"start_variant_position\",\"end_variant_position\",\"nucleotide_positions_cdna\",\"actual_mutation_cdna\",\"start_variant_position_cdna\",\"end_variant_position_cdna\",\"header_genome\",\"header_cdna\",\"header_cds\",\"nucleotide_positions_genome\",\"actual_mutation_genome\",\"start_variant_position_genome\",\"end_variant_position_genome\",\"distance_to_nearest_splice_junction\",\"is_near_splice_junction_10\",\"nearby_variants\",\"nearby_variants_count\",\"has_a_nearby_variant\"]\n",
+    "columns_to_list = [\"vcrs_header\",\"order\",\"seq_ID\",\"mutation_cdna\",\"variant_type\",\"wt_sequence\",\"nucleotide_positions\",\"actual_mutation\",\"mutation\",\"mutation_aa\",\"GENOMIC_MUTATION_ID\",\"chromosome\",\"strand\",\"mutation_genome\",\"gene_name\",\"mutation_id\",\"start_variant_position\",\"end_variant_position\",\"nucleotide_positions_cdna\",\"actual_mutation_cdna\",\"start_variant_position_cdna\",\"end_variant_position_cdna\",\"header_genome\",\"header_cdna\",\"header_cds\",\"nucleotide_positions_genome\",\"actual_mutation_genome\",\"start_variant_position_genome\",\"end_variant_position_genome\",\"distance_to_nearest_splice_junction\",\"is_near_splice_junction_10\",\"nearby_variants\",\"nearby_variants_count\",\"has_a_nearby_variant\"]\n",
     "columns_to_or = [\"included_in_synthetic_reads_mutant\",\"included_in_synthetic_reads_wt\",\"included_in_synthetic_reads\", \"any_noisy_reads\", \"any_noisy_reads_mutant\", \"any_noisy_reads_wt\"]\n",
     "columns_to_sum = [\"list_of_read_starting_indices_mutant\",\"list_of_read_starting_indices_wt\",\"number_of_reads_wt\",\"number_of_reads_mutant\",\"noisy_read_indices_mutant\",\"noisy_read_indices_wt\"]\n",
     "columns_to_all = []\n",
