continuing to troubleshoot vk info; about to try a full data run

--- a/notebooks/1_0_vk_ref_count_tutorial.ipynb
+++ b/notebooks/1_0_vk_ref_count_tutorial.ipynb
@@ -29,9 +29,9 @@
     "# vk ref\n",
     "download = False  # download vk ref index and t2g\n",
     "filters=(\n",
-    "    \"substring_alignment_to_reference:equal=none\",  # filter out variants which are a substring of the reference genome\n",
+    "    \"substring_alignment_to_reference:is_not_true\",  # filter out variants which are a substring of the reference genome\n",
     "    \"pseudoaligned_to_reference_despite_not_truly_aligning:is_not_true\",  # filter out variants which pseudoaligned to human genome despite not truly aligning\n",
-    "    \"alignment_to_reference:equal=none\",  # *** erase eventually when I want to d-list  # filter out variants which are capable of being d-listed (given that I filter out the substrings above)\n",
+    "    \"alignment_to_reference:is_not_true\",  # *** erase eventually when I want to d-list  # filter out variants which are capable of being d-listed (given that I filter out the substrings above)\n",
     "    \"num_distinct_triplets:greater_than=2\",\n",
     ")\n",
     "cosmic_version = 100  # COSMIC version for gget cosmic\n",
